# tg_gateway

./: .gitignore  Makefile  README.rst  pyproject.toml
.github/workflows/: pypi-release.yml
.tests/: app.py
examples/: fastapi_webhook_handler.py  simple.py
tg_gateway/: __init__.py  client.py  const.py  exceptions.py
tg_gateway/enums/: __init__.py  delivery_status_type.py  verification_status_type.py
tg_gateway/methods/: __init__.py  base.py  check_send_ability.py  check_verification_status.py  revoke_verification_message.py  send_verification_message.py
tg_gateway/types/: __init__.py  base.py  custom.py  delivery_status.py  request_status.py  verification_status.py
